EM-3389 WIP - implement Azure and Postgres integration