@@ -16,14 +16,13 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import static java.util.Collections.singleton;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.doReturn;
 
 @ExtendWith(MockitoExtension.class)
-public class HearingRecordingServiceImplTests {
+class HearingRecordingServiceImplTests {
     @Mock
     private JobInProgressRepository jobInProgressRepository;
     @Mock
@@ -33,115 +32,113 @@ public class HearingRecordingServiceImplTests {
     @InjectMocks
     private HearingRecordingServiceImpl underTest;
 
-    private final String folderName = "folder-1";
+    private static final String TEST_FOLDER = "folder-1";
+    private static final String FILE_1 = "f1.mp4";
+    private static final String FILE_2 = "f2.mp4";
+    private static final String FILE_3 = "f3.mp4";
 
     @Test
     void testShouldReturnEmptySetWhenNoCompletedFilesAndNoInProgressFilesFound() {
-        doReturn(Collections.emptyList()).when(jobInProgressRepository).findByFolder(folderName);
-        doReturn(Collections.emptyList()).when(hearingRecordingRepository).findByFolder(folderName);
-        doReturn(Collections.emptySet()).when(hearingRecordingStorage).findByFolder(folderName);
+        doReturn(Collections.emptyList()).when(jobInProgressRepository).findByFolder(TEST_FOLDER);
+        doReturn(Collections.emptyList()).when(hearingRecordingRepository).findByFolder(TEST_FOLDER);
+        doReturn(Collections.emptySet()).when(hearingRecordingStorage).findByFolder(TEST_FOLDER);
         final Set<String> expectedFilenames = Collections.emptySet();
 
-        final Set<String> actualFilenames = underTest.getStoredFiles(folderName);
+        final Set<String> actualFilenames = underTest.getStoredFiles(TEST_FOLDER);
 
         assertThat(actualFilenames).hasSameElementsAs(expectedFilenames);
     }
 
     @Test
     void testShouldReturnCompletedFilesWhenCompletedFilesButNoInProgressFilesFound() {
-        doReturn(Collections.emptyList()).when(jobInProgressRepository).findByFolder(folderName);
-        doReturn(createMetadataFilenames(1, 3)).when(hearingRecordingRepository).findByFolder(folderName);
-        doReturn(createBlobstoreFilenames(1, 3)).when(hearingRecordingStorage).findByFolder(folderName);
-        final Set<String> expectedFilenames = Set.of("f1.mp4", "f2.mp4", "f3.mp4");
+        doReturn(Collections.emptyList()).when(jobInProgressRepository).findByFolder(TEST_FOLDER);
+        doReturn(createMetadataFilenames(Set.of(FILE_1, FILE_2, FILE_3)))
+            .when(hearingRecordingRepository).findByFolder(TEST_FOLDER);
+        doReturn(Set.of(FILE_1, FILE_2, FILE_3)).when(hearingRecordingStorage).findByFolder(TEST_FOLDER);
+        final Set<String> expectedFilenames = Set.of(FILE_1, FILE_2, FILE_3);
 
-        final Set<String> actualFilenames = underTest.getStoredFiles(folderName);
+        final Set<String> actualFilenames = underTest.getStoredFiles(TEST_FOLDER);
 
         assertThat(actualFilenames).hasSameElementsAs(expectedFilenames);
     }
 
     @Test
     void testShouldReturnInProgressFilesWhenNoCompletedFilesButInProgressFilesFound() {
-        doReturn(createJobsInProgress(1, 2)).when(jobInProgressRepository).findByFolder(folderName);
-        doReturn(Collections.emptyList()).when(hearingRecordingRepository).findByFolder(folderName);
-        doReturn(Collections.emptySet()).when(hearingRecordingStorage).findByFolder(folderName);
-        final Set<String> expectedFilenames = Set.of("f1.mp4", "f2.mp4");
+        doReturn(createJobsInProgress(Set.of(FILE_1, FILE_2))).when(jobInProgressRepository).findByFolder(TEST_FOLDER);
+        doReturn(Collections.emptyList()).when(hearingRecordingRepository).findByFolder(TEST_FOLDER);
+        doReturn(Collections.emptySet()).when(hearingRecordingStorage).findByFolder(TEST_FOLDER);
+        final Set<String> expectedFilenames = Set.of(FILE_1, FILE_2);
 
-        final Set<String> actualFilenames = underTest.getStoredFiles(folderName);
+        final Set<String> actualFilenames = underTest.getStoredFiles(TEST_FOLDER);
 
         assertThat(actualFilenames).hasSameElementsAs(expectedFilenames);
     }
 
     @Test
     void testShouldReturnInProgressFilesAndCompletedFilesWhenCompletedFilesAndInProgressFilesFound() {
-        doReturn(createJobsInProgress(3, 3)).when(jobInProgressRepository).findByFolder(folderName);
-        doReturn(createMetadataFilenames(1, 2)).when(hearingRecordingRepository).findByFolder(folderName);
-        doReturn(createBlobstoreFilenames(1, 2)).when(hearingRecordingStorage).findByFolder(folderName);
-        final Set<String> expectedFilenames = Set.of("f1.mp4", "f2.mp4", "f3.mp4");
+        doReturn(createJobsInProgress(Set.of(FILE_3))).when(jobInProgressRepository).findByFolder(TEST_FOLDER);
+        doReturn(createMetadataFilenames(Set.of(FILE_1, FILE_2)))
+            .when(hearingRecordingRepository).findByFolder(TEST_FOLDER);
+        doReturn(Set.of(FILE_1, FILE_2)).when(hearingRecordingStorage).findByFolder(TEST_FOLDER);
+        final Set<String> expectedFilenames = Set.of(FILE_1, FILE_2, FILE_3);
 
-        final Set<String> actualFilenames = underTest.getStoredFiles(folderName);
+        final Set<String> actualFilenames = underTest.getStoredFiles(TEST_FOLDER);
 
         assertThat(actualFilenames).hasSameElementsAs(expectedFilenames);
     }
 
     @Test
     void testShouldReturnUnionOfInProgressFilesAndCompletedFilesWhenFileAppearsInBothInProgressAndCompleted() {
-        doReturn(createJobsInProgress(2, 3)).when(jobInProgressRepository).findByFolder(folderName);
-        doReturn(createMetadataFilenames(1, 2)).when(hearingRecordingRepository).findByFolder(folderName);
-        doReturn(createBlobstoreFilenames(1, 2)).when(hearingRecordingStorage).findByFolder(folderName);
-        final Set<String> expectedFilenames = Set.of("f1.mp4", "f2.mp4", "f3.mp4");
+        doReturn(createJobsInProgress(Set.of(FILE_2, FILE_3))).when(jobInProgressRepository).findByFolder(TEST_FOLDER);
+        doReturn(createMetadataFilenames(Set.of(FILE_1, FILE_2)))
+            .when(hearingRecordingRepository).findByFolder(TEST_FOLDER);
+        doReturn(Set.of(FILE_1, FILE_2)).when(hearingRecordingStorage).findByFolder(TEST_FOLDER);
+        final Set<String> expectedFilenames = Set.of(FILE_1, FILE_2, FILE_3);
 
-        final Set<String> actualFilenames = underTest.getStoredFiles(folderName);
+        final Set<String> actualFilenames = underTest.getStoredFiles(TEST_FOLDER);
 
         assertThat(actualFilenames).hasSameElementsAs(expectedFilenames);
     }
 
     @Test
     void testShouldExcludeFileWhenFileIsPresentInMetadataDatabaseButMissingInBlobstore() {
-        doReturn(Collections.emptyList()).when(jobInProgressRepository).findByFolder(folderName);
-        doReturn(createMetadataFilenames(1, 3)).when(hearingRecordingRepository).findByFolder(folderName);
-        doReturn(createBlobstoreFilenames(2, 3)).when(hearingRecordingStorage).findByFolder(folderName);
-        final Set<String> expectedFilenames = Set.of("f2.mp4", "f3.mp4");
+        doReturn(Collections.emptyList()).when(jobInProgressRepository).findByFolder(TEST_FOLDER);
+        doReturn(createMetadataFilenames(Set.of(FILE_1, FILE_2, FILE_3)))
+            .when(hearingRecordingRepository).findByFolder(TEST_FOLDER);
+        doReturn(Set.of(FILE_2, FILE_3)).when(hearingRecordingStorage).findByFolder(TEST_FOLDER);
+        final Set<String> expectedFilenames = Set.of(FILE_2, FILE_3);
 
-        final Set<String> actualFilenames = underTest.getStoredFiles(folderName);
+        final Set<String> actualFilenames = underTest.getStoredFiles(TEST_FOLDER);
 
         assertThat(actualFilenames).hasSameElementsAs(expectedFilenames);
     }
 
     @Test
     void testShouldExcludeFileWhenFileIsPresentInBlobstoreButMissingInMetadataDatabase() {
-        doReturn(Collections.emptyList()).when(jobInProgressRepository).findByFolder(folderName);
-        doReturn(createMetadataFilenames(2, 3)).when(hearingRecordingRepository).findByFolder(folderName);
-        doReturn(createBlobstoreFilenames(1, 3)).when(hearingRecordingStorage).findByFolder(folderName);
-        final Set<String> expectedFilenames = Set.of("f2.mp4", "f3.mp4");
+        doReturn(Collections.emptyList()).when(jobInProgressRepository).findByFolder(TEST_FOLDER);
+        doReturn(createMetadataFilenames(Set.of(FILE_2, FILE_3)))
+            .when(hearingRecordingRepository).findByFolder(TEST_FOLDER);
+        doReturn(Set.of(FILE_1, FILE_2, FILE_3)).when(hearingRecordingStorage).findByFolder(TEST_FOLDER);
+        final Set<String> expectedFilenames = Set.of(FILE_2, FILE_3);
 
-        final Set<String> actualFilenames = underTest.getStoredFiles(folderName);
+        final Set<String> actualFilenames = underTest.getStoredFiles(TEST_FOLDER);
 
         assertThat(actualFilenames).hasSameElementsAs(expectedFilenames);
     }
 
-    private String createIndexedFilename(final int index) {
-        return "f" + index + ".mp4";
-    }
-
-    private List<HearingRecording> createMetadataFilenames(final int start, final int end) {
-        return IntStream.rangeClosed(start, end)
-            .mapToObj(x -> HearingRecording.builder().segments(buildSingleHearingRecordingSegments(x)).build())
+    private List<HearingRecording> createMetadataFilenames(final Set<String> filenames) {
+        return filenames.stream()
+            .map(x -> HearingRecording.builder().segments(buildSingleHearingRecordingSegments(x)).build())
             .collect(Collectors.toUnmodifiableList());
     }
 
-    private Set<HearingRecordingSegment> buildSingleHearingRecordingSegments(final int fileIndex) {
-        return singleton(HearingRecordingSegment.builder().fileName(createIndexedFilename(fileIndex)).build());
+    private Set<HearingRecordingSegment> buildSingleHearingRecordingSegments(final String filename) {
+        return singleton(HearingRecordingSegment.builder().fileName(filename).build());
     }
 
-    private Set<String> createBlobstoreFilenames(final int start, final int end) {
-        return IntStream.rangeClosed(start, end)
-            .mapToObj(this::createIndexedFilename)
-            .collect(Collectors.toUnmodifiableSet());
-    }
-
-    private List<JobInProgress> createJobsInProgress(final int start, final int end) {
-        return IntStream.rangeClosed(start, end)
-            .mapToObj(x -> JobInProgress.builder().filename(createIndexedFilename(x)).build())
+    private List<JobInProgress> createJobsInProgress(final Set<String> filenames) {
+        return filenames.stream()
+            .map(x -> JobInProgress.builder().filename(x).build())
             .collect(Collectors.toUnmodifiableList());
     }
 
